# finger-node

./: .gitignore  Addon.cpp  CMakeLists.txt  DataProcessingAsyncWorker.cpp  DataProcessingAsyncWorker.h  FingerAsyncWorker.cpp  FingerAsyncWorker.h  FingerEnrollAsyncWorker.cpp  FingerEnrollAsyncWorker.h  FingerScanner.cpp  FingerScanner.h  FingerVerifyAsyncWorker.cpp  FingerVerifyAsyncWorker.h  base64.h  finger_test.cpp  finger_test.js  index.js  main.c  main.cpp  package-lock.json  package.json  run_node_test.bat  run_node_test.sh  templates.txt
finger_node_test/: finger.js  finger_test.js
finger_scanner/: base64.cpp
finger_scanner/includes/: FingerScanner.h  base64.h
finger_test/: CMakeLists.txt  finger_test.cpp
napi_addon/: Addon.cpp  FingerVerifyAsyncWorker.cpp
napi_addon/includes/: FingerVerifyAsyncWorker.h
zktekolib/unix/include/: libzkfp.h
